fixed text-align

--- a/lab4css.css
+++ b/lab4css.css
@@ -34,6 +34,7 @@ main{
 }
 p{
     color: black;
+    text-align: justify;
 }
 
 a{
